# stupid_snake

./: .gitignore  Cargo.toml  LICENSE  collect_data.py  constants.py  environment.yml  httpclient.py  listen.py  listen.spec  model_a.tflite  model_b.tflite  models.py  readme.md  train.py  utils.py
react-simple-snake-master/demo/: index.css
react-simple-snake-master/src/: SnakeGame.jsx
snake/: package-lock.json  package.json
snake/demo/: index.js  webpack.config.js
snake_wasm/: .babelrc  Cargo.toml  package.json
snake_wasm/internals/webpack/: webpack.config.js
snake_wasm/public/: .gitignore  AudioProcessor.js  package.json
snake_wasm/src/: utils.rs
snake_wasm/www/: index.js
snake_wasm/www/app/: App.js  setupAudio.js
snake_wasm/www/workers/: Infer.js
src/: main.rs
